@@ -1,22 +1,18 @@
-#!/usr/bin/env bash
 # ==============================================================================
-# alias
+# bash 配置文件
+# ==============================================================================
+# 位置: ~/.zshrc
 #
-#             By 秦凡东
+#           By 秦凡东
 # ==============================================================================
 
 # ==============================================================================
-# disable any global alias
+# Prompt
 # ==============================================================================
-for alias in $(alias -g | grep -oP '^.+?(?==)'); do
-  unalias $alias
-done
+PS1="$(if [[ ${EUID} == 0 ]]; then echo '\[\e[01;31m\]\h'; else echo '\[\e[01;32m\]\u@\h'; fi)\[\e[01;34m\] \w\n\[\e[01;37m\]\$? \$(if [[ \$? == 0 ]]; then echo \"\[\e[01;32m\]\342\234\223\"; else echo \"\[\e[01;31m\]\342\234\227\"; fi)\[\033[00m\] "
 
 # ==============================================================================
-# safe global alias
+# 加载自定义函数
 # ==============================================================================
-alias -g ....='../..'
-alias -g ......='../../..'
-alias -g ........='../../../..'
-alias -g ..........='../../../../..'
+source ~/.zsh/reactor.sh
 
