@@ -136,7 +136,7 @@ language message zh_CN.utf-8          " 打印信息的语言
 " manual 手册
 " ==============================================================================
 runtime ftplugin/man.vim
-nmap,m :Man <cword><CR>
+nmap ,m :Man <cword><CR>
 
 " ==============================================================================
 " 插件
@@ -293,6 +293,9 @@ let g:clang_auto_select = 1
 " ==============================================================================
 " 按键映射
 " ==============================================================================
+" 快速查找、替换
+nmap ,f :/<C-R><C-W><CR>
+nmap ,h :%s//<C-R><C-W>/g<HOME><RIGHT><RIGHT><RIGHT>
 " 清空光标所在引号的内容
 nmap ,cd di"
 nmap ,cs di'
