@@ -1,0 +1,8 @@
+这是一个shell 的通用配置目录，使用了bash 语法，可以由所有兼容bash 语法的shell 加载。
+
+在你的shell 配置文件中加入以下语句：
+
+```shell
+source $HOME/.zsh/reactor.sh
+```
+
