@@ -1,9 +1,11 @@
-#!/usr/bin/env zsh
+#!/usr/bin/env bash
 # ==============================================================================
-# local binary path
+# rubygems binary path
 #
 #             By 秦凡东
 # ==============================================================================
 
-export PATH="$HOME/bin:$PATH"
+if [[ -s /usr/bin/gem ]]; then
+  export PATH="$(ruby -rubygems -e 'puts Gem.user_dir')/bin:$PATH"
+fi
 
